<resources>
    <string name="app_name">SlotMachineGal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pagos_qr_mostra_tu_qr_terminal">Mostrá tu QR y pagá en la terminal</string>
    <string name="pagos_qr_paga_cuenta_principal">Pagás con tu cuenta principal</string>
    <string name="pagos_qr_genera_uno_nuevo">Generá uno nuevo si vas a pagar un segundo viaje.</string>
    <string name="pagos_qr_el_pago_puede_tardar_en_debitarse">El pago puede tardar en debitarse de tu cuenta.</string>
    <string name="pagos_qr_btn_generar_nuevo_qr">Generar nuevo QR</string>
    <string name="hello_blank_fragment">JVBERi0xLjcNCiW1tbW1DQoxIDAgb2JqDQo8PC9UeXBlL0Nhd</string>
    <string name="nfc_enrolled_cards_title">Deslizá para elegir con qué tarjeta querés pagar</string>
    <string name="nfc_enrolled_cards_subtitle">También podés cambiar tu tarjeta principal o activar otras.</string>
    <string name="text_detail_encoded">MTQuIERBVE9TIFBFUlNPTkFMRVMuIExFWSBERSBQUk9URUNDScOTTiBERSBEQVRPUyBQRVJTT05BTEVTIChMRVkgMjUuMzI2IGRlIEhBQkVBUyBEQVRBKQoxNC4xLiBMb3MgZGF0b3MgcGVyc29uYWxlcyBhcXXDrSBpbmNsdWlkb3MgdGllbmVuIGVsIGNhcsOhY3RlciBkZSBkZWNsYXJhY2nDs24ganVyYWRhIHkgc29uIHJlY29naWRvcyBwYXJhIHNlciBpbmNvcnBvcmFkb3MgeSB0cmF0YWRvcyBlbiB1bmEgYmFzZSBkZSBkYXRvcyBsYSBjdWFsIHNlIGVuY3VlbnRyYSByZWdpc3RyYWRhIGVuIGxhIEFnZW5jaWEgZGUgQWNjZXNvIGEgbGEgSW5mb3JtYWNpw7NuIFDDumJsaWNhIGN1eW8gZGVzdGluYXRhcmlvIGZpbmFsIGVzIEJhbmNvIEdhbGljaWEuCjE0LjIuIExhIExleSBkZSBQcm90ZWNjacOzbiBkZSBsb3MgRGF0b3MgUGVyc29uYWxlcyAoTGV5IE7CsCAyNS4zMjYpIGVzIHVuYSBub3JtYSBkZSBvcmRlbiBww7pibGljbyBxdWUgcmVndWxhIGxhIGFjdGl2aWRhZCBkZSBsYXMgYmFzZXMgZGUgZGF0b3MgcXVlIHJlZ2lzdHJhbiBpbmZvcm1hY2nDs24gZGUgY2Fyw6FjdGVyIHBlcnNvbmFsLiBTdSBvYmpldG8gZXMgZ2FyYW50aXphciBhIGxhcyBwZXJzb25hcyBlbCBjb250cm9sIGRlbCB1c28gZGUgc3VzIGRhdG9zIHBlcnNvbmFsZXMuIEVsIHRpdHVsYXIgZGUgbG9zIGRhdG9zIHBlcnNvbmFsZXMgdGllbmUgbGEgZmFjdWx0YWQgZGUgZWplcmNlciBlbCBkZXJlY2hvIGRlIGFjY2VzbyBhIGxvcyBtaXNtb3MgZW4gZm9ybWEgZ3JhdHVpdGEgYSBpbnRlcnZhbG9zIG5vIGluZmVyaW9yZXMgYSBzZWlzIG1lc2VzLCBzYWx2byBxdWUgc2UgYWNyZWRpdGUgdW4gaW50ZXLDqXMgbGVnw610aW1vIGFsIGVmZWN0byBjb25mb3JtZSBsbyBlc3RhYmxlY2lkbyBlbiBlbCBhcnTDrWN1bG8gMTQsIGluY2lzbyAzIGRlIGxhIExleSBOwrogMjUuMzI2LgoxNC4zLiBTaXN0ZW1hcyBkZSBCaW9tZXRyw61hOiBFbiBjYXNvIGRlIHF1ZSBlbCBCYW5jbyBHYWxpY2lhIGRlZmluYSBlbCB1c28gZGUgZGlzcG9zaXRpdm9zIHBhcmEgbGEgY2FwdHVyYSwgbGVjdHVyYSB5L28gcHJvY2VzYW1pZW50byBkZSBkYXRvcyDigJNpbmNsdXNpdmUgYXF1ZWxsb3MgZGUgY2Fyw6FjdGVyIGJpb23DqXRyaWNvc+KAkyBlbiBhbGd1bm8gZGUgc3VzIHByb2Nlc29zIG9wZXJhdGl2b3MgeS9vIGRlIHNlZ3VyaWRhZCBhcGxpY2FibGVzLCBlbCB1c3VhcmlvIGF1dG9yaXphIGFsIEJhbmNvIGEgY29tcGFydGlyIGVzdG9zIGRhdG9zIGNvbiB0ZXJjZXJvcyBleGNsdXNpdmFtZW50ZSBwYXJhIGVsIHJlc2d1YXJkbyBkZSBsYSBpbmZvcm1hY2nDs24gY2FwdHVyYWRhLCBsYSB2ZXJpZmljYWNpw7NuIGRlIGxhIGlkZW50aWRhZCBkZWwgdGl0dWxhciBkZSBsb3MgZGF0b3MgeS9vIGNvbiBsb3MgZmluZXMgcXVlIGVsIEJhbmNvIEdhbGljaWEgZGV0ZXJtaW5lLgoxNC40LiBMYSBBZ2VuY2lhIGRlIEFjY2VzbyBhIGxhIEluZm9ybWFjacOzbiBQw7pibGljYSwgw5NyZ2FubyBkZSBDb250cm9sIGRlIGxhIExleSBOwrogMjUuMzI2LCB0aWVuZSBsYSBhdHJpYnVjacOzbiBkZSBhdGVuZGVyIGxhcyBkZW51bmNpYXMgeSByZWNsYW1vcyBxdWUgc2UgaW50ZXJwb25nYW4gY29uIHJlbGFjacOzbiBhbCBpbmN1bXBsaW1pZW50byBkZSBsYXMgbm9ybWFzIHNvYnJlIHByb3RlY2Npw7NuIGRlIGRhdG9zIHBlcnNvbmFsZXMuIExvcyBkYXRvcyByZWNhYmFkb3MgZW4gZWwgcHJlc2VudGUgZm9ybXVsYXJpbyBvYmVkZWNlbiBhIGxvcyByZXF1aXNpdG9zIHBhcmEgZWwgb3RvcmdhbWllbnRvIGRlbCBwcm9kdWN0byBvIHByb2R1Y3RvcyBxdWUgZXN0w6Egc29saWNpdGFuZG8geSBzb24gZGUgdXRpbGl6YWNpw7NuIHkgYXBsaWNhY2nDs24gZGUgbnVlc3RyYSBhY3RpdmlkYWQgY29tbyBlbnRpZGFkIGZpbmFuY2llcmEuIENvbW8gdGFsZXMsIGxvcyBtaXNtb3Mgc2UgbWFudGVuZHLDoW4gZW4gc29wb3J0ZSBwYXBlbCB5IGFkZW3DoXMgc2Vyw6FuIGluY29ycG9yYWRvcyBhIGxvcyBzaXN0ZW1hcyBkZWwgQmFuY28gY3V5YSBiYXNlIGRlIGRhdG9zIGVzIGRlIHRpdHVsYXJpZGFkIHkgY29udHJvbCBkZSBlc3RhIGVudGlkYWQsIGVuY29udHLDoW5kb3NlIGRlYmlkYW1lbnRlIGluc2NyaXB0YSBlbiBlbCBSZWdpc3RybyBOYWNpb25hbCBkZSBCYXNlcyBkZSBEYXRvcy4KMTQuNS4gVXN0ZWQgcHVlZGUgY29uc3VsdGFyIGVsIOKAnFLDqWdpbWVuIGRlIFRyYW5zcGFyZW5jaWHigJ0gZWxhYm9yYWRvIHBvciBlbCBCYW5jbyBDZW50cmFsIGRlIGxhIFJlcMO6YmxpY2EgQXJnZW50aW5hIHNvYnJlIGxhIGJhc2UgZGUgbGEgaW5mb3JtYWNpw7NuIHByb3BvcmNpb25hZGEgcG9yIGxvcyBzdWpldG9zIG9ibGlnYWRvcyBhIGZpbiBkZSBjb21wYXJhciBsb3MgY29zdG9zLCBjYXJhY3RlcsOtc3RpY2FzIHkgcmVxdWlzaXRvcyBkZSBsb3MgcHJvZHVjdG9zIHkgc2VydmljaW9zIGZpbmFuY2llcm9zLCBpbmdyZXNhbmRvIGEgaHR0cDovL3d3dy5iY3JhLmdvYi5hci9CQ1JBeVZvcy9SZWdpbWVuX2RlX3RyYW5zcGFyZW5jaWEuYXNwLiAxNC42LiBFbCBDbGllbnRlIHByZXN0YSBzdSBleHByZXNvIGNvbnNlbnRpbWllbnRvIHBhcmEgcXVlIGVsIEJhbmNvLCBkZSBjb25mb3JtaWRhZCBjb24gbG8gZGlzcHVlc3RvIHBvciBsYSBMZXkgTsK6IDI1LjMyNiBkZSBQcm90ZWNjacOzbiBkZSBEYXRvcyBQZXJzb25hbGVzLCB0cmFuc2ZpZXJhIHkgY2VkYSwgYcO6biBlbiBmb3JtYSBncmF0dWl0YSwgbWFudGVuaWVuZG8gbGEgY29uZmlkZW5jaWFsaWRhZCB5IHNlZ3VyaWRhZCBkZSBsb3MgZGF0b3MsIGEgc3VzIGFmaWxpYWRhcywgc3Vic2lkaWFyaWFzLCBjb250cm9sYW50ZXMsIGNvbnRyb2xhZGFzIHkvbyBjdWFscXVpZXIgdGVyY2VybywgdG9kYSBsYSBpbmZvcm1hY2nDs24gcmVmZXJlbnRlIGEgc3UgcGVyc29uYSwgeWEgc2VhIHNvYnJlIGRhdG9zIHBlcnNvbmFsZXMsIGNvbW8gYXPDrSBzb2JyZSBzdSBhY3RpdmlkYWQgZWNvbsOzbWljYSB1IG9wZXJhY2lvbmVzIHF1ZSBzZSBodWJpZXJhbiBjb25jZXJ0YWRvIG8gcXVlIHNlIGNvbmNlcnRlbiBlbiBlbCBmdXR1cm8sIGNvbiBlbCBvYmpldG8gZGUgcXVlIGRpY2hhIGluZm9ybWFjacOzbiBzZWEgdXRpbGl6YWRhIGNvbiBmaW5lcyBlc3RhZMOtc3RpY29zLCBjb21lcmNpYWxlcywgZGUgY29udHJvbCB5L28gZGUgY2FsaWZpY2FjacOzbiBjcmVkaXRpY2lhLg==</string>
</resources>